Migrate binding-generator to JUnit5
This is the last holdout of JUnit4, migrate it.

Change-Id: Ib63ecc67c6d38d384552b10fb4948420533f3b86
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>