@@ -7,26 +7,26 @@
  */
 package org.opendaylight.yangtools.binding.generator.impl;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import com.google.common.collect.ImmutableSet;
+import java.util.Set;
 import java.util.stream.Collectors;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.opendaylight.yangtools.binding.model.api.GeneratedType;
 import org.opendaylight.yangtools.binding.model.api.JavaTypeName;
 import org.opendaylight.yangtools.yang.test.util.YangParserTestUtils;
 
-public class Mdsal459Test {
+class Mdsal459Test {
     @Test
-    public void testAugmentedAction() {
+    void testAugmentedAction() {
         final var types = DefaultBindingGenerator.generateFor(
             YangParserTestUtils.parseYangResourceDirectory("/mdsal-459/"));
         assertNotNull(types);
         assertEquals(7, types.size());
 
         final var typeNames = types.stream().map(GeneratedType::getIdentifier).collect(Collectors.toSet());
-        assertEquals(ImmutableSet.of(
+        assertEquals(Set.of(
             JavaTypeName.create("org.opendaylight.yang.gen.v1.base.norev", "Foo"),
             JavaTypeName.create("org.opendaylight.yang.gen.v1.base.norev", "BaseData"),
             JavaTypeName.create("org.opendaylight.yang.gen.v1.aug.norev", "AugData"),
